[project]
name = "pie_py"
version = "0.0.1"
authors = [
  { name="ityeri", email="ityeri9@gmail.com" },
]
description = "파이봇"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "aioconsole",
    "aiohappyeyeballs",
    "aiohttp",
    "aiosignal",
    "anyio",
    "attrs",
    "certifi",
    "cffi",
    "discord",
    "discord.py",
    "dotenv",
    "frozenlist",
    "h11",
    "httpcore",
    "httpx",
    "multidict",
    "prompt_toolkit",
    "propcache",
    "PyMySQL",
    "PyNaCl",
    "python-dotenv",
    "pytubefix",
    "sniffio",
    "SQLAlchemy",
    "typing_extensions",
    "wcwidth",
    "yarl",
    "youtube-search-python @ git+https://github.com/ityeri/yspy.git"
]

[project.optional-dependencies]
test = []

[project.urls]
Homepage = "https://github.com/ityeri/pie_py"
Issues = "https://github.com/ityeri/pie_py/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"